--- a/TFP_DenseVAE_MNIST.ipynb
+++ b/TFP_DenseVAE_MNIST.ipynb
@@ -137,68 +137,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_encoder():\n",
-    "    # define prior distribution for the code, which is an isotropic Gaussian\n",
-    "    prior = tfd.Independent(tfd.Normal(loc=tf.zeros(2), scale=1.), \n",
-    "                            reinterpreted_batch_ndims=1)\n",
-    "    # build layers argument for tf.keras.Sequential()\n",
-    "    input_shape = (28,28,1)\n",
-    "    layers = [tf.keras.layers.InputLayer(input_shape=input_shape)]\n",
-    "    layers.append(tf.keras.layers.Conv2D(filters=32, kernel_size=3, strides=(2,2), \n",
-    "                              padding='valid', activation='relu'))\n",
-    "    layers.append(tf.keras.layers.Conv2D(filters=64, kernel_size=3, strides=(2,2), \n",
-    "                              padding='valid', activation='relu'))\n",
-    "    layers.append(tf.keras.layers.Flatten())\n",
-    "    # the following two lines set the output to be a probabilistic distribution\n",
-    "    layers.append(tf.keras.layers.Dense(tfp.layers.IndependentNormal.params_size(2), \n",
-    "                             activation=None, name='z_params'))\n",
-    "    layers.append(tfp.layers.IndependentNormal(2, \n",
-    "        convert_to_tensor_fn=tfd.Distribution.sample, \n",
-    "        activity_regularizer=tfp.layers.KLDivergenceRegularizer(prior, weight=1), \n",
-    "        name='z_layer'))\n",
-    "    return tf.keras.Sequential(layers, name='encoder')\n",
-    "\n",
-    "\n",
-    "def get_decoder():\n",
-    "    layers = [tf.keras.layers.InputLayer(input_shape=2)]\n",
-    "    layers.append(tf.keras.layers.Dense(7*7*32, activation=None))\n",
-    "    layers.append(tf.keras.layers.Reshape((7,7,32)))\n",
-    "    layers.append(tf.keras.layers.Conv2DTranspose(filters=64, kernel_size=3, strides=2, \n",
-    "                                       padding='same', activation='relu'))\n",
-    "    layers.append(tf.keras.layers.Conv2DTranspose(filters=32, kernel_size=3, strides=2, \n",
-    "                                       padding='same', activation='relu'))\n",
-    "    layers.append(tf.keras.layers.Conv2DTranspose(filters=1, kernel_size=3, strides=1, \n",
-    "                                       padding='same'))\n",
-    "    layers.append(tf.keras.layers.Flatten(name='x_params'))\n",
-    "    # note that here we don't need \n",
-    "    # `tf.keras.layers.Dense(tfp.layers.IndependentBernoulli.params_size(self.dim_x))` because \n",
-    "    # we've restored the desired input shape with the last Conv2DTranspose layer\n",
-    "    layers.append(tfp.layers.IndependentBernoulli((28,28,1), name='x_layer'))\n",
-    "    return tf.keras.Sequential(layers, name='decoder')\n",
-    "\n",
-    "\n",
-    "def autoencoder(encoder,decoder):\n",
-    "    x_input = tf.keras.Input(shape=(28,28,1))\n",
-    "    encoder = get_encoder()\n",
-    "    decoder = get_decoder()\n",
-    "    z = encoder(x_input)\n",
-    "\n",
-    "    # compile VAE model\n",
-    "    model = tf.keras.Model(inputs=x_input, outputs=decoder(z))\n",
-    "    model.compile(loss=negative_log_likelihood, \n",
-    "                  optimizer=tf.keras.optimizers.Adam(1e-3))\n",
-    "    return model\n",
-    "\n",
-    "# the negative of log-likelihood for probabilistic output\n",
-    "negative_log_likelihood = lambda x, rv_x: -rv_x.log_prob(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 140,
    "metadata": {},
    "outputs": [],
@@ -253,6 +191,66 @@
    ],
    "source": [
     "model.fit(x_train_images,x_train_images,batch_size=100,epochs=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'norm' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-87c383f57436>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# is Gaussian\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mz1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnorm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mppf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinspace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.01\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.99\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0mz2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnorm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mppf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinspace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.01\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.99\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mz_grid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmeshgrid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mz1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mz2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'norm' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# display a 2D manifold of the digits\n",
+    "n = 15  # figure with 15x15 digits\n",
+    "digit_size = 28\n",
+    "\n",
+    "latent_dim = 2\n",
+    "\n",
+    "# linearly spaced coordinates on the unit square were transformed\n",
+    "# through the inverse CDF (ppf) of the Gaussian to produce values\n",
+    "# of the latent variables z, since the prior of the latent space\n",
+    "# is Gaussian\n",
+    "\n",
+    "z1 = norm.ppf(np.linspace(0.01, 0.99, n))\n",
+    "z2 = norm.ppf(np.linspace(0.01, 0.99, n))\n",
+    "z_grid = np.dstack(np.meshgrid(z1, z2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_pred_grid = tf.sigmoid(vardecoder.predict(z_grid.reshape(n*n, latent_dim))).numpy() \\\n",
+    "                     .reshape(n, n, digit_size, digit_size)\n",
+    "\n",
+    "fig, ax = plt.subplots(1,1, figsize=(10,10))\n",
+    "ax.imshow(np.block(list(map(list, x_pred_grid))), cmap='gray')\n",
+    "# ax.axis('off')\n",
+    "ax.set_xlabel('$z_1$  ', fontsize=32)\n",
+    "ax.set_ylabel('$z_2$   ', fontsize=32,rotation=0)\n",
+    "ax.set_xticklabels('')\n",
+    "ax.set_yticklabels('')\n",
+    "plt.tight_layout()"
    ]
   },
   {
